--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	 "name":				"openlss/func-time"
 	,"homepage":			"http://openlss.org"
 	,"description":			"Time helper functions"
-	,"license":				"LGPLv2"
+	,"license":				"LGPL-3.0+"
 	,"type":				"library"
 	,"keywords": [
 		 "time"
